修改了好多地方

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">旅途摄影</string>
+    <string name="app_name">最美摄影</string>
 
 
     <string name="main_tab_text1">地图</string>
